# factuality_eval

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml
config/: dataset_generation.yaml  hallucination_detection.yaml
docs/: literature_study.md
src/factuality_eval/: __init__.py  dataset_generation.py  detect_hallucinations.py  hallucination_detection.py  model_generation.py  prompt_utils.py  selfcheck_gpt.py  train.py
src/factuality_eval/hallbayes/scripts/: backend_entry.py  hallucination_toolkit.py  stable_decode.py
src/prompts/: qa_prompt_bg.txt  qa_prompt_bs.txt  qa_prompt_ca.txt  qa_prompt_cs.txt  qa_prompt_da.txt  qa_prompt_de.txt  qa_prompt_el.txt  qa_prompt_en.txt  qa_prompt_es.txt  qa_prompt_et.txt  qa_prompt_fi.txt  qa_prompt_fo.txt  qa_prompt_fr.txt  qa_prompt_hr.txt  qa_prompt_hu.txt  qa_prompt_is.txt  qa_prompt_it.txt  qa_prompt_lt.txt  qa_prompt_lv.txt  qa_prompt_nl.txt  qa_prompt_no.txt  qa_prompt_pl.txt  qa_prompt_pt.txt  qa_prompt_ro.txt  qa_prompt_sk.txt  qa_prompt_sl.txt  qa_prompt_sr.txt  qa_prompt_sv.txt  qa_prompt_uk.txt  selfcheckgpt_prompt_da.txt  selfcheckgpt_prompt_de.txt  selfcheckgpt_prompt_en.txt
src/scripts/: detect_hallucinations.py  evaluate_hallucination.py  generate_dataset.py  ground_truth.py  hallbayes.py  main.py  selfCheckGPT.py  selfcheckgpt.py  train_hallucination_detector.py
tests/: __init__.py  test_generate_dataset.py
