[project]
name = "factuality_eval"
version = "0.0.0"
description = "Evaluation of how factual/trustworthy LLMs are."
readme = "README.md"
authors = [
    {name = "Freja Thoresen", email = "freja.thoresen@alexandra.dk"},
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
maintainers = [
    {name = "Freja Thoresen", email = "freja.thoresen@alexandra.dk"},
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "hydra-core>=1.3.2",
    "lettucedetect>=0.1.8",
    "nltk>=3.9.1",
    "protobuf>=6.32.1",
    "python-dotenv>=1.0.1",
    "openai>=1.4.0",
    "tiktoken>=0.11.0",
]

[project.urls]
Repository = "https://github.com/alexandrainst/factuality_eval"
Issues = "https://github.com/alexandrainst/factuality_eval/issues"

[project.license]
file = "LICENSE"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.3.0",
    "readme-coverage-badger>=1.0.1",
    "click>=8.2.1",
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "nbstripout>=0.8.1",
    "coverage>=7.10.5",
    "mkdocs-material>=9.6.18",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkapi>=4.4.5",
    "pip>=25.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # isort (imports)
    "I",
    # pydocstyle (docstrings)
    "D",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for "cls" arguments
    "ANN102",
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
    # Docstrings for **kwargs
    "D417",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/factuality_eval',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/factuality_eval",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
